# rcj_localization

./: .gitignore  CMakeLists.txt  package.xml  run_rcj.sh
docs/: amcl_tuning_guide.md
include/rcj_localization/: particle_filter.hpp  particle_filter_v2.hpp  vision_processor.hpp  white_line_debug_utils.hpp  white_line_preprocessing.hpp
launch/: black_feature_fastmap_pipeline.launch.py  camera_ros_fastmap_remap.launch.py  camera_ros_white_line_hsv_dt_ridge_fastmap.launch.py  camera_ros_white_line_hsv_dt_ridge_fastmap_localization_v2.launch.py  camera_ros_white_line_hsv_fastmap.launch.py  camera_ros_white_line_hsv_fastmap_localization_v2.launch.py  camera_ros_white_line_lab_morph_fastmap_profile.launch.py  camera_ros_white_line_lab_skeleton_fastmap_localization.launch.py  camera_ros_white_line_lab_skeleton_fastmap_pipeline.launch.py  camera_tuner.launch.py  image_fastmap_pipeline.launch.py  image_publish_launch.xml  localization.launch.py  white_line_lab_skeleton_fastmap_localization.launch.py  white_line_lab_skeleton_fastmap_localization_merged.launch.py  white_line_lab_skeleton_fastmap_localization_merged_v2.launch.py  white_line_lab_skeleton_fastmap_pipeline.launch.py  white_line_lab_skeleton_pipeline.launch.py
maps/: rcj_map.yaml
scripts/: generate_rcj_map.py  yaw_publisher.py
src/: black_feature_detector_node.cpp  camera_tuner_node.cpp  estimateUndistortMetersPerPixel.m  exportUndistortMap_v3.m  fake_image_publisher.py  hsv_tuner_node.cpp  image_publisher.py  main_node.cpp  opencv_remap_example.cpp  openmv_getImage.py  particle_filter.cpp  particle_filter_v2.cpp  pf_localization_node.cpp  ros2_fastmap_remap_node.cpp  runEstimateUndistortMetersPerPixel.m  topdown_mask_points_node.cpp  topdown_pf_localization_node.cpp  topdown_pf_localization_node_v2.cpp  vision_processor.cpp  vision_processor_node.cpp  white_line_adaptive_threshold_node.cpp  white_line_cluster_node.cpp  white_line_debug_utils.cpp  white_line_dt_ridge_filter_node.cpp  white_line_edge_node.cpp  white_line_hsv_cluster_node.cpp  white_line_hsv_white_node.cpp  white_line_lab_cluster_node.cpp  white_line_lab_morph_node.cpp  white_line_preprocess_node.cpp  white_line_preprocessing.cpp  white_line_probability_node.cpp  white_line_skeleton_filter_node.cpp
src/fake_publish/test_imagepublisher/: fake_image_publisher.py
